--- a/.env
+++ b/.env
@@ -1,6 +1,17 @@
 // Github token
-GIT_TOKEN = 639e504e9384f2578ca733400e93d2ec493e0ab3
+GIT_PERSONAL_ACCESS_TOKEN = "639e504e9384f2578ca733400e93d2ec493e0ab3"
+GIT_OWNER = "Lighthouse-Inc"
+GIT_REPO = "isana-android"
+GIT_API_ENDPOINT =
+  "https://api.github.com/repos/Lighthouse-Inc/isana-android"
 
-SLACK_MESSAGE_API =
-  "https://hooks.slack.com/services/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";
+GIT_VERSION_FILE_REF = "contents/versionApp.properties"
+  
+SLACK_MESSAGE_HOOK = "https://hooks.slack.com/services/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"
 
+ANDROID_RELEASE = "android release"
+ANDROID_RELEASE_PATCH = "android release patch"
+ANDROID_RELEASE_MAJOR = "android release major"
+ANDROID_RELEASE_MINOR = "android release minor"
+
+GIT_VERSION_FILE_REF = "https://api.github.com/repos/Lighthouse-Inc/isana-android/contents/versionApp.properties"
