--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ GIT_PERSONAL_ACCESS_TOKEN = "639e504e9384f2578ca733400e93d2ec493e0ab3"
 GIT_OWNER = "Lighthouse-Inc"
 GIT_REPO = "isana-android"
 GIT_VERSION_FILE_REF = "contents/versionApp.properties"
+GIT_FOLDER = "test"
   
 SLACK_MESSAGE_HOOK = "https://hooks.slack.com/services/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"
 
