--- a/.env
+++ b/.env
@@ -1,14 +1,17 @@
 // Github token
-GIT_PERSONAL_ACCESS_TOKEN = "639e504e9384f2578ca733400e93d2ec493e0ab3"
+GIT_PERSONAL_ACCESS_TOKEN = "4974aca54a44450f288051653416598cbd6ae76d"
 GIT_OWNER = "Lighthouse-Inc"
 GIT_REPO = "isana-android"
 GIT_VERSION_FILE_REF = "contents/versionApp.properties"
-GIT_FOLDER = "test"
+GIT_RELEASE_PROD_FOLDER = "release-test"
+GIT_RELEASE_STG_FOLDER = "staging-test"
+GIT_RELEASE_STG_FOLDER = "staging-test"
   
-SLACK_MESSAGE_HOOK = "https://hooks.slack.com/services/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"
+SLACK_MESSAGE_HOOK = "https://hooks.slack.com/services/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"
 
-ANDROID_RELEASE = "android release"
-ANDROID_RELEASE_PATCH = "android release patch"
-ANDROID_RELEASE_MAJOR = "android release major"
-ANDROID_RELEASE_MINOR = "android release minor"
+ANDROID_RELEASE_DEFAULT = "release"
+ANDROID_RELEASE_PATCH = "patch"
+ANDROID_RELEASE_MINOR = "minor"
+ANDROID_RELEASE_MAJOR = "major"
+
 
